feat: :sparkles: show posts of the database

--- a/src/main/resources/com/example/mongoose_java/index.css
+++ b/src/main/resources/com/example/mongoose_java/index.css
@@ -6,3 +6,7 @@
     -fx-font-family: 'Nunito', sans-serif;
     -fx-font-weight: 200;
 }
+
+.scrollBar:vertical {
+    -fx-background-color: red !important;
+}
